syntax = "proto2";

package tutorial;

message AndroidBuildProto {
  optional string id = 1;
  optional string product = 2;
  optional string carrier = 3;
  optional string radio = 4;
  optional string bootloader = 5;
  optional string client = 6;
  optional int64 timestamp = 7;
  optional int32 googleServices = 8;
  optional string device = 9;
  optional int32 sdkVersion = 10;
  optional string model = 11;
  optional string manufacturer = 12;
  optional string buildProduct = 13;
  optional bool otaInstalled = 14;
}

message AndroidCheckinProto {
  optional AndroidBuildProto build = 1;
  optional int64 lastCheckinMsec = 2;
  repeated AndroidEventProto event = 3;
  repeated AndroidStatisticProto stat = 4;
  repeated string requestedGroup = 5;
  optional string cellOperator = 6;
  optional string simOperator = 7;
  optional string roaming = 8;
  optional int32 userNumber = 9;
}

message AndroidEventProto {
  optional string tag = 1;
  optional string value = 2;
  optional int64 timeMsec = 3;
}

message AndroidStatisticProto {
  optional string tag = 1;
  optional int32 count = 2;
  optional float sum = 3;
}

message DeviceConfigurationProto {
  optional int32 touchScreen = 1;
  optional int32 keyboard = 2;
  optional int32 navigation = 3;
  optional int32 screenLayout = 4;
  optional bool hasHardKeyboard = 5;
  optional bool hasFiveWayNavigation = 6;
  optional int32 screenDensity = 7;
  optional int32 glEsVersion = 8;
  repeated string systemSharedLibrary = 9;
  repeated string systemAvailableFeature = 10;
  repeated string nativePlatform = 11;
  optional int32 screenWidth = 12;
  optional int32 screenHeight = 13;
  repeated string systemSupportedLocale = 14;
  repeated string glExtension = 15;
  optional int32 deviceClass = 16;
  optional int32 maxApkDownloadSizeMb = 17[default = 50];
  optional int32 smallestScreenWidthDP = 18;
  optional int32 lowRamDevice = 19[default=0];
  optional int64 totalMemoryBytes = 20[default=8354971648];
  optional int32 maxNumOf_CPUCores = 21[default=8];
  repeated DeviceFeature deviceFeature = 26;
  optional int32 unknown28 = 28[default=0];
  optional int32 unknown30 = 30[default=4];
}

message DeviceFeature {
  optional string name = 1;
  optional int32 value = 2;
}

message AndroidCheckinRequest {
  optional string imei = 1;
  optional int64 id = 2[default=0];
  optional string digest = 3;
  optional AndroidCheckinProto checkin = 4;
  optional string desiredBuild = 5;
  optional string locale = 6;
  optional int64 loggingId = 7;
  optional string marketCheckin = 8;
  repeated string macAddr = 9;
  optional string meid = 10;
  repeated string accountCookie = 11;
  optional string timeZone = 12;
  optional fixed64 securityToken = 13;
  optional int32 version = 14;
  repeated string otaCert = 15;
  optional string serialNumber = 16;
  optional string esn = 17;
  optional DeviceConfigurationProto deviceConfiguration = 18;
  repeated string macAddrType = 19;
  optional int32 fragment = 20;
  optional string userName = 21;
  optional int32 userSerialNumber = 22;
}